# obscura

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  dev.bat  dev.sh  docker-compose.yml  pyproject.toml
backend/: config.py  dependencies.py  main.py
backend/models/: ai.py  drop.py  intent.py
backend/routers/: ai.py  drops.py  health.py
backend/services/: ai_service.py  drop_service.py  intent_service.py
backend/tests/: conftest.py  test_ai.py  test_burn.py  test_drops.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AiResponseBox.jsx  AiWarningPanel.jsx  BurnAnimation.jsx  CopyLinkButton.jsx  FileChip.jsx  FileDropZone.jsx  IntentWarning.jsx  SecurityBriefingModal.jsx  TerminalBox.jsx  ThemeToggle.jsx
frontend/src/lib/: api.js  crypto.js  envelope.js  messageStats.js  theme.js
frontend/src/pages/: Compose.jsx  Docs.jsx  HowItWorks.jsx  NotFound.jsx  Privacy.jsx  Receive.jsx
