[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obscura"
version = "0.1.0"
description = "Encrypted Dead Drop Messenger — zero-knowledge, burn-after-read"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "redis[asyncio]>=5.0.0",
    "python-ulid>=2.7.0",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "fakeredis[asyncio]>=2.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[tool.hatch.build.targets.wheel]
packages = ["backend"]
